[package]
authors = ["Without Boats <woboats@gmail.com>"]
description = "Derive Display"
license = "MIT OR Apache-2.0"
name = "display_derive"
repository = "https://github.com/withoutboats/display_derive"
version = "1.0.0"

[dependencies]
quote = "0.6"
syn = "0.14"
synstructure = "0.9"
proc-macro2 = "0.4"

[dev-dependencies.failure]
version = "0.1.0"

[lib]
proc-macro = true

[features]
default = ["std"]
std = []
